--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,16 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+publishing {
+  repositories {
+    maven {
+      name = "GitHubPackages"
+      url = "https://maven.pkg.github.com/neographer/neo-gitactions"
+      credentials {
+        username = System.getenv("GITHUB_ACTOR")
+        password = System.getenv("GITHUB_TOKEN")
+      }
+    }
+  }
+}
