--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ test {
 }
 
 publishing {
+  publications {
+   myLibrary(MavenPublication) {
+            from components.java
+        }
+    }
   repositories {
     maven {
       name = "GitHubPackages"
