--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ publishing {
       url = "https://maven.pkg.github.com/neographer/neo-gitactions"
       credentials {
         username = System.getenv("GITHUB_ACTOR")
-        password = System.getenv("GITHUB_TOKEN")
+        password = System.getenv("PAT")
       }
     }
   }
