--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -34,4 +34,4 @@ jobs:
       run: gradle publish
       env:
         USERNAME: ${{ github.username }}
-        TOKEN: ${{ secrets.TOKEN }}
+        TOKEN: ${{ github.token }}
